--- a/style.css
+++ b/style.css
@@ -39,12 +39,15 @@ margin-left: 7px;
     width: 40px;
     height: 4px;
     border-radius: 10px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     transition: all 0.5s ease;
   }
   .menu-burger .burger-middel::after,
   .menu-burger .burger-middel::before{
-   content: ''; width: 40px;height: 4px;border-radius: 10px;background-color: rgb(0, 0, 0);position: absolute;
+   content: ''; width: 40px;
+   height: 4px;
+   border-radius: 10px;
+   background-color: rgb(255, 255, 255);position: absolute;
    transition: all 0.5s ease;
 
   }
