--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@
      background-color: rgb(255, 255, 255);
      z-index: 1;border-radius: 10px;
   }
+  h3{
+    text-align: center;
+  }
   body{
     background-color: rgb(230, 230, 230);
   }
