--- a/men.css
+++ b/men.css
@@ -298,14 +298,13 @@
       flex-wrap: wrap;
     }
     .boxx1{
-      width: 45%;
-      /* background-color: azure !important; */
+      width: 100%;
+       background-color: rgb(24, 224, 224);
       box-shadow: 0 0 7px black;
     }
   .boxx2{
     width:100%;
-    /* height: 500px; */
-    /* background-color: rgb(0, 0, 0) !important;  */
+    /* background-color: rgb(148, 76, 76) ; */
     flex-wrap: wrap;
   }
   .bx1{
@@ -372,7 +371,7 @@
     background-color: rgb(39, 38, 38);
     display: flex;
     gap: 8px;
-    margin-top: 5000px;
+    margin-top:5000px;
   }
   .class-left{
   width: 50%;
