--- a/style.css
+++ b/style.css
@@ -14,11 +14,8 @@
      display: flex;
      justify-content: center;
      align-items: center;
-     background-color: rgb(255, 255, 255);
+     /* background-color: rgb(0, 0, 0); */
      z-index: 1;border-radius: 10px;
-  }
-  h3{
-    text-align: center;
   }
   body{
     background-color: rgb(230, 230, 230);
@@ -47,10 +44,7 @@ margin-left: 7px;
   }
   .menu-burger .burger-middel::after,
   .menu-burger .burger-middel::before{
-   content: ''; width: 40px;
-   height: 4px;
-   border-radius: 10px;
-   background-color: rgb(0, 0, 0);position: absolute;
+   content: ''; width: 40px;height: 4px;border-radius: 10px;background-color: rgb(0, 0, 0);position: absolute;
    transition: all 0.5s ease;
 
   }
@@ -167,7 +161,7 @@ gap: 10px;
   width: 100%;
   /* background-color: darkblue; */
   height: 420px;
-  margin-top: 80px;
+  margin-top: 65px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #020202;
   text-align: center;
@@ -304,14 +298,13 @@ color:  whitesmoke;
     flex-wrap: wrap;
   }
   .boxx1{
-    width: 45%;
-    /* background-color: azure !important; */
+    width: 100%;
+     background-color: rgb(24, 224, 224);
     box-shadow: 0 0 7px black;
   }
 .boxx2{
   width:100%;
-  /* height: 500px; */
-  /* background-color: rgb(0, 0, 0) !important;  */
+  /* background-color: rgb(148, 76, 76) ; */
   flex-wrap: wrap;
 }
 .bx1{
